[gd_scene load_steps=20 format=2]

[ext_resource path="res://Items/ManaCrystals/ManaCrystalShadow.png" type="Texture" id=1]
[ext_resource path="res://Items/ManaCrystals/Mana Crystal.png" type="Texture" id=2]
[ext_resource path="res://Items/ManaCrystals/ManaCrystal.gd" type="Script" id=3]
[ext_resource path="res://Overlaps/PlayerDetection.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlaps/CollectBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://VFX/PlusMana.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 72.0388

[sub_resource type="CapsuleShape2D" id=13]
radius = 6.63334

[node name="ManaCrystal" type="Node2D"]
script = ExtResource( 3 )
PlusMana = ExtResource( 6 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 11 )
frame = 1
playing = true

[node name="CollisionOverlaps" type="Node2D" parent="."]

[node name="PlayerDetection" parent="CollisionOverlaps" instance=ExtResource( 4 )]
collision_layer = 0
collision_mask = 2

[node name="Collision" parent="CollisionOverlaps/PlayerDetection" index="0"]
position = Vector2( 0.250351, 0 )
shape = SubResource( 12 )

[node name="CollectBox" parent="CollisionOverlaps" instance=ExtResource( 5 )]
collision_mask = 2

[node name="Collision" parent="CollisionOverlaps/CollectBox" index="0"]
position = Vector2( -0.385536, -10.1525 )
shape = SubResource( 13 )
[connection signal="area_entered" from="CollisionOverlaps/CollectBox" to="." method="_on_CollectBox_area_entered"]

[editable path="CollisionOverlaps/PlayerDetection"]

[editable path="CollisionOverlaps/CollectBox"]
